# modem-scraper

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
modem-scraper-lib/: Cargo.toml
modem-scraper-lib/src/: lib.rs  payloads.rs
modem-scraper-lib/src/payloads/: s33.rs
src/: lib.rs  main.rs
